components/centraldashboard-angular/manifests/kustomize/components/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-angular
spec:
  template:
    metadata:
      labels:
        sidecar.istio.io/inject: "true"
