components/centraldashboard-angular/manifests/kustomize/components/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: dashboard-angular
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: kubeflow-dashboard-angular
      app.kubernetes.io/component: dashboard-angular
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: centraldashboard-angular
      app.kubernetes.io/part-of: kubeflow-dashboard
