components/centraldashboard-angular/manifests/kustomize/components/istio/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-angular
spec:
  podSelector:
    matchLabels:
      app: kubeflow-dashboard-angular
      app.kubernetes.io/component: dashboard-angular
  ingress:
    - from:
        ## allow traffic from istio namespace, which is where the istio ingress gateway pods typically run
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - istio-system
        ## allow traffic from pods in the same namespace
        - podSelector: {}
  policyTypes:
    - Ingress
